Bug 77353 - Weston does not handle LIBINPUT_EVENT_TOUCH_FRAME (log spam)
Summary: Weston does not handle LIBINPUT_EVENT_TOUCH_FRAME (log spam)
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-04-12 00:50 UTC by U. Artie Eoff
Modified: 2014-05-07 22:37 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description U. Artie Eoff 2014-04-12 00:50:33 UTC
libinput generates LIBINPUT_EVENT_TOUCH_FRAME for touch devices.  However, Weston does not handle this event in evdev_device_process_event(...) and as a result the following message is spammed to the weston log:

  unknown libinput event 504

The error is annoying at best and does not seem to break touch functionality.

libinput (master) heads/master-0-g6aa6e2f
weston (master) heads/master-0-gc1c2110
Comment 1 Jonas Ådahl 2014-04-12 07:41:25 UTC
Seems to have missed posting the patch hooking up frame events to the list. I just sent it now:
http://lists.freedesktop.org/archives/wayland-devel/2014-April/014205.html
Comment 2 Kristian Høgsberg 2014-04-21 23:03:56 UTC
commit 1679f232e541489eedd94774bcfaec9752fdea64
Author: Jonas Ådahl <jadahl@gmail.com>
Date:   Sat Apr 12 09:39:51 2014 +0200

    libinput: Forward frame events to clients
    
    Fixes: https://bugs.freedesktop.org/show_bug.cgi?id=77353
    
    Signed-off-by: Jonas Ådahl <jadahl@gmail.com>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.